# 419-HW3

./: .gitignore  LICENSE  README.md  hj_grid.npz  ros_entrypoint.sh
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  wsl-devcontainer.json
controller/: README.md  package.xml  setup.py
controller/controller/: cbf_algorithm.py  compute_hj_value_function.py  hj_algorithm.py  lqr_algorithm.py
controller/params/: controller_params.yaml
mpc/: package.xml  readme.md  setup.py
mpc/launch/: sim_env.launch.py
mpc/models/empty_room/: model.sdf
mpc/mpc/: robot_pose_publisher.py
mpc/params/: nav2_params.yaml
mpc/test/: conftest.py  test_mppi_algorithm.py  test_mppi_ros_launch.py  test_nmpc_ros_launch.py
nav_helpers/: setup.py
nav_helpers/nav_helpers/: trajectory.py
nav_helpers_msgs/msg/: StateActionTrajectory.msg
setup/: clean.sh  conda_setup.sh  cyclonedds.xml  cyclonedds_lo.xml  odp_setup_conda.sh  setup.sh
src/controller/: README.md  robot_readme.md
src/controller/controller/: __init__.py  cbf_algorithm.py  compute_hj_value_function.py  controller_base.py  controller_node.py  dubins3d_2ctrls.py  hj_algorithm.py  reference_trajectory.py
src/controller/launch/: controller.launch.py
src/controller/params/: controller_params.yaml
src/mpc/mpc/: mpc_planner.py  mppi_algorithm.py  nmpc_algorithm.py  transform_to_pose.py
src/mpc/params/: mpc_planner_params.yaml
src/mpc/rviz/: default_mpc_settings.rviz
src/mpc/test/: test_nmpc_algorithm.py
src/nav_helpers/: package.xml  setup.cfg
src/nav_helpers_msgs/: CMakeLists.txt  package.xml
(+16 files in other folders)
